# TRANS-04-big-data-engines-benchmark

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  create_measurements.py  development.md  pyproject.toml
dashboard/: app_duckdb_csv_table.py
docs/evidence/: run_results.json
src/: __init__.py  create_station_metrics_mart.py  etl_duckdb.py  etl_pandas.py  etl_pandas_chunking.py  etl_python.py  etl_python_chunking.py  etl_python_polars_lazy.py  etl_python_pyarrow.py  etl_utils.py
tests/: test_etl_pipelines.py  test_generator.py
