[project]
name = "billion-challenge"
version = "0.1.0"
description = "Benchmark implementations for the One Billion Row Challenge in Python."
authors = [
    {name = "Andre Matiello Caramanti", email = "matiello.andre@hotmail.com"}
]
license = "MIT"
license-files = ["LICENSE.md"]
readme = "README.md"
requires-python = ">=3.11,<3.12"
keywords = ["data engineering", "benchmarking", "duckdb", "one billion row challenge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pytest (>=9.0.3,<10.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "ignr (>=2.2,<3.0)",
    "black (>=26.3.1,<27.0.0)",
    "pip-audit (>=2.9.0,<3.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "ruff (>=0.11.12,<0.12.0)",
    "github-cli (>=1.0.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "polars (>=1.30.0,<2.0.0)",
    "duckdb (>=1.3.0,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "requests (>=2.33.0,<3.0.0)",
    "plotly (>=6.1.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "src"}]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
